# fractal-dimension

./: .gitignore  pyproject.toml
fractal-dimension/: config.py  main.py
fractal-dimension/scripts/: bw_box_counting.py
fractal-dimension/utilities/: arg_parsing.py  config.py  data.py
