[tool.poetry]
name = "fractal-dimension"
version = "0.0.1"
description = "Fractal dimension estimation"
authors = ["Matthew Pimblott <matthew@pimblott.com>"]
packages = [{include = "fractal-dimension"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
imageio = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"